<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_marginTop="20dp"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/cardviewgate1"
            android:layout_width="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorblack"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="About" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/colorblack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:padding="10dp"
                    android:text="@string/developed"
                    android:textColor="@color/colorblack"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/shubham"
                    android:textColor="@color/colorblack"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dept"
                    android:textColor="@color/colorblack"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batch"
                    android:textColor="@color/colorblack"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graphicera"
                    android:textColor="@color/colorblack"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/colorblack"
                    android:textSize="14sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>