<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorblack"
        android:gravity="center"
        android:text="Select your place" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/cardviewgate1"
            android:layout_width="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_height="190dp"
            android:focusable="true"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:padding="10dp"
                    android:background="@drawable/gate1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/gate1"
                    android:textColor="@color/colorblack"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/cardviewgate2"
            android:layout_width="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:padding="10dp"

                    android:background="@drawable/gate2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"

                    android:text="@string/gate2"
                    android:textColor="@color/colorblack"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/cardviewcsit"
            android:layout_width="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="250dp"
                    android:padding="10dp"
                    android:layout_height="150dp"
                    android:background="@drawable/csit" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/csit"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorblack"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>